--- a/style.css
+++ b/style.css
@@ -1,15 +1,18 @@
 body {
-    font-family: 'Montserrat', sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
     margin: 0;
     background: aliceblue;
+    font-family: 'Montserrat', sans-serif;
+    background-image: url("https://source.unsplash.com/1600x900/?lanscape");
+    font-size: 120%;
 }
 
 .card {
-    background: powderblue;
+    background: #000000d0;
+    color: white;
     padding: 2em;
     border-radius: 30px;
     width: 100%;
@@ -17,3 +20,41 @@ body {
     margin: 1em;
 }
 
+.search {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+button:hover {
+    background: #7c7c7c6b;
+}
+
+button {
+    margin: 0.5rem;
+    border-radius: 50%;
+    border: none;
+    height: 44px;
+    width: 44px;
+    outline: none;
+    background: #7c7c7c2b;
+    color: white;
+    cursor: pointer;
+    transition: 0.2s ease-in-out;
+}
+
+input.search-bar {
+    border: none;
+    outline: none;
+    padding: 0.4em 1em;
+    border-radius: 24px;
+    background-color: #7c7c7c2b;
+    color: white;
+    font-family: inherit;
+    font-size: 105%;
+    width: calc(100% - 100px);
+}
+
+h1.temp {
+    margin: 0;
+}
